# acgn-assistant

./: .dockerignore  .env.example  .env.local.example  .gitignore  .vercelignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  vercel.json
.github/: copilot-instructions.md
api/: index.py
deploy/: Caddyfile  README.md  docker-compose.prod.yml
scripts/: gen_cursors_cur.py  smoke_e2e.py  smoke_llm.py  start_dev.ps1
src/acgn_assistant/: db.py  db_migrations.py  main.py
src/acgn_assistant/controllers/: ui.py
src/acgn_assistant/core/: config.py  security.py  time.py
src/acgn_assistant/models/: __init__.py  admin_audit_log.py  conversation.py  events.py  guestbook.py  memory.py  password_reset.py  registration_code.py  report.py  resource.py  user.py  user_profile.py
src/acgn_assistant/routers/: admin_audit.py  admin_conversations.py  admin_users.py  auth.py  conversations.py  deps.py  guestbook.py  memory.py  profile.py  recommendations.py  reports.py  resources.py  system.py  users.py
src/acgn_assistant/services/: agent_orchestrator.py  agent_prompts.py  bootstrap.py  chat_engine.py  deepseek_client.py  emailer.py  guardrails.py  memory_context.py  memory_writer.py  recommendations_engine.py  web_search.py
src/acgn_assistant/static/: auth.css  miku1.cur  miku1_32.cur  miku1_48.cur  miku2.cur  miku2_32.cur  miku2_48.cur
src/acgn_assistant/views/: forgot.html  landing.html  login.html  privacy.html  register.html  terms.html
tests/: conftest.py  test_basic_flow.py  test_guestbook.py
